consul/consul.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: consul
  namespace: guzhangguanli
  labels:
    app: consul
spec:
  serviceName: consul
  replicas: 3
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - consul
              topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 10
      nodeSelector:
        node-role.kubernetes.io/edge: worker
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/edge
        operator: Exists
      containers:
      - name: consul
        image: 10.235.9.36:30002/cms/consul:1.12.3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        args:
             - "agent"
             - "-server"
             - "-bootstrap-expect=3"
             - "-ui"
             - "-data-dir=/consul/data"
             - "-config-file=/consul/conf/acl.json"
             - "-bind=0.0.0.0"
             - "-client=0.0.0.0"
             - "-advertise=$(PODIP)"
             - "-retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local"
             - "-retry-join=consul-1.consul.$(NAMESPACE).svc.cluster.local"
             - "-retry-join=consul-2.consul.$(NAMESPACE).svc.cluster.local"
             - "-domain=cluster.local"
             - "-disable-host-node-id"
        volumeMounts:
            - name: datadir
              mountPath: /consul/data
            - name: config
              mountPath: /consul/conf
            - name: timeconfig
              mountPath: /etc/localtime
        ports:
            - containerPort: 8500
              name: ui-port
            - containerPort: 8400
              name: alt-port
            - containerPort: 53
              name: udp-port
            - containerPort: 8443
              name: https-port
            - containerPort: 8080
              name: http-port
            - containerPort: 8301
              name: serflan
            - containerPort: 8302
              name: serfwan
            - containerPort: 8600
              name: consuldns
            - containerPort: 8300
              name: server
      volumes:
      - name: config
        configMap:
          name: consul-configmap
      - name: timeconfig
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
  volumeClaimTemplates:
  - metadata:
      name: datadir
      annotations:
         volume.beta.kubernetes.io/storage-class: "anything"
    spec:
      accessModes: [ "ReadWriteMany" ]
      resources:
        requests:
          storage: 50Gi
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: consul-client
  namespace: guzhangguanli
spec:
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      terminationGracePeriodSeconds: 10
      nodeSelector:
        node-role.kubernetes.io/edge: worker
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/edge
        operator: Exists
      containers:
      - name: consul
        image: 10.235.9.36:30002/cms/consul:1.12.3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        args:
             - "agent"
             - "-ui"
             - "-data-dir=/consul/data"
             - "-config-file=/consul/conf/acl.json"
             - "-bind=0.0.0.0"
             - "-client=0.0.0.0"
             - "-advertise=$(PODIP)"
             - "-retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local"
             - "-retry-join=consul-1.consul.$(NAMESPACE).svc.cluster.local"
             - "-retry-join=consul-2.consul.$(NAMESPACE).svc.cluster.local"
             - "-domain=cluster.local"
             - "-disable-host-node-id"
        volumeMounts:
            - name: datadir
              mountPath: /consul/data
            - name: config
              mountPath: /consul/conf
            - name: timeconfig
              mountPath: /etc/localtime
        ports:
            - containerPort: 8500
              name: ui-port
            - containerPort: 8400
              name: alt-port
            - containerPort: 53
              name: udp-port
            - containerPort: 8443
              name: https-port
            - containerPort: 8080
              name: http-port
            - containerPort: 8301
              name: serflan
            - containerPort: 8302
              name: serfwan
            - containerPort: 8600
              name: consuldns
            - containerPort: 8300
              name: server
      volumes:
      - name: config
        configMap:
          name: consul-client-configmap
      - name: datadir
        emptyDir: {}
      - name: timeconfig
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
