consul/consul-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: consul
   namespace: guzhangguanli
   labels:
     name: consul
spec:
   type: ClusterIP
   ports:
    - name: http
      port: 8500
      targetPort: 8500
    - name: https
      port: 8443
      targetPort: 8443
    - name: rpc
      port: 8400
      targetPort: 8400
    - name: serflan-tcp
      protocol: "TCP"
      port: 8301
      targetPort: 8301
    - name: serflan-udp
      protocol: "UDP"
      port: 8301
      targetPort: 8301
    - name: serfwan-tcp
      protocol: "TCP"
      port: 8302
      targetPort: 8302
    - name: serfwan-udp
      protocol: "UDP"
      port: 8302
      targetPort: 8302
    - name: server
      port: 8300
      targetPort: 8300
    - name: consuldns
      port: 8600
      targetPort: 8600
   selector:
    app: consul
---
apiVersion: v1
kind: Service
metadata:
   name: consul-client
   namespace: guzhangguanli
spec:
   # type: ClusterIP
   type: NodePort
   ports:
    - name: http
      port: 7100
      targetPort: 8500
      nodePort: 30101
   selector:
     component: client
